--- a/common/static/css/base.css
+++ b/common/static/css/base.css
@@ -1,9 +1,15 @@
 body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    padding-top: 50px; /* 60px to make the container go all the way to the bottom of the topbar */
+    background-color: #F4F4F5;
+    background-image: url(/static/img/purty_wood.png);
+    font-size: 13px;
 }
 
-body, .navbar-search .search-query {
-    font-family: 'Open Sans', sans-serif;
+.content {
+}
+
+body, .navbar-search .search-query, input, button, select, textarea {
+    -webkit-font-smoothing: antialiased;
 }
 
 .post {
