--- a/discussion/templates/discussion/discussion_detail.html
+++ b/discussion/templates/discussion/discussion_detail.html
@@ -1,37 +1,46 @@
 {% extends "discussion/base.html" %}
 {% load discussiontags %}
 
-{% block forum_content %}
-    <h2>{{ object }}</h2>
-    <div class="posts_wrapper">
-        <form action="{% url discussion_add_post discussion_slug=object.slug %}" method="POST" enctype="multipart/form-data" class="post-form">
-            <h3>Add new post:</h3>
-            {% include 'discussion/_post_form_fields.html' %}
-        </form>
+
+{% block sidebar %}
+    <div class="post-list">
         {% for post in object.post_set.all %}
-            <article class="post post-list-{{ forloop.counter }}" id="post-{{ post.id }}">
+            <article class="post post-list-{{ forloop.counter }}" id="post-{{ post.id }}" data-url="{{ post.get_absolute_url }}">
                 {% url discussion_post pk=post.pk discussion_slug=object.slug as post_detail %}
                 <div class="post-info">
-                    {% include 'discussion/_post_detail.html' %}
-                    <div class="comment-count">{{ post.comment_set.all.count|default:"No" }} repl{{ post.comment_set.all.count|pluralize:"y,ies" }}</div>
-                    <div class="post-links">
-                        <a href="#reply-{{ forloop.counter }}" class="post-reply">Reply</a>
-                        <a href="{{ post_detail }}" class="post-permalink">Full conversation</a>
-                    </div>
-                </div>
-                <section class="post-comments">
-                    {% if post.comment_set.all.count > 0 %}
-                        <h3 class="replies">Replies:</h3>
-                        {% for comment in post.comment_set.all %}
-                            {% include 'discussion/_comment_detail.html' %}
-                        {% endfor %}
+                    <header class="post-header">
+                        <div class="post-author">
+                            <h5 class="user-name">{{ post.user.get_full_name }}</h5>
+                            <time pubdate="{{ post.time }}" class="post-date">{{ post.time|date:"d M Y" }}</time>
+                        </div>
+                    </header>
+                    <section class="post-body">
+                        {{ post.body|truncatechars:70|urlize }}
+                    </section>
+
+                    {% if post.comment_set.all.count %}
+                    <div class="comment-count">{{ post.comment_set.all.count}}</div>
                     {% endif %}
-                    <div class="comment-form-wrapper" id="reply-{{ forloop.counter }}">
-                        {% comment_form post %}
-                    </div>
-                </section>
+                </div>
             </article>
         {% endfor %}
     </div>
-    <a href="{% url discussion_index %}" class="index-link">All discussions</a>
+{% endblock %}
+
+{% block forum_content %}
+{% endblock %}
+
+{% block extra_script %}
+<script>
+$(document).ready(function() {
+    $('.post-list .post').click(function() {
+        $('.post.active').removeClass('active');
+        $(this).addClass('active');
+        url = $(this).data('url');
+        $('#forum-content').load(url + ' .post');
+    })
+
+    $($('.post').get(0)).trigger('click');
+})
+</script>
 {% endblock %}
