--- a/discussion/templates/discussion/_post_detail.html
+++ b/discussion/templates/discussion/_post_detail.html
@@ -6,7 +6,7 @@
         <a href="#" class="avatar" title="{{ post.user.get_full_name }}"><img src="{% gravatar_for_user post.user 90 %}"/><div>{{ post.user.get_full_name }}</div></a>
 {#    <time pubdate="{{ post.time }}" class="post-date">{{ post.time|date:"d/m/Y" }}</time>#}
   </div>
-    <button class="btn btn-small pull-right"><i class="icon-share-alt" style="-webkit-transform: scaleX(-1);"></i> Reply</button>
+    <button class="btn btn-small pull-right reply-btn"><i class="icon-share-alt" style="-webkit-transform: scaleX(-1);"></i> Reply</button>
 </header>
 <section class="post-body">
    <div class="avatar-doppleganger"></div>
