--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -17,8 +17,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="{% url home %}">KOMMKAT</a>
+            <a class="brand logo" href="{% url home %}">KOMMKAT</a>
 
+            {% if user.is_authenticated %}
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="nav-item-home"><a href="{% url home %}"><i class="icon-inbox icon-white"></i> Inbox</a></li>
@@ -30,8 +31,8 @@
                     {% csrf_token %}
                     {{ search_form.search }}
                 </form>
-
             </div>
+            {% endif %}
             <!--/.nav-collapse -->
         </div>
     </div>
