--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -13,6 +13,7 @@
 
 {% block content %}
        <div id="login">
+       <img src="{{ STATIC_URL }}img/logo2.png"/>
             <div id="pilot"></div>
                 <ul>
             <form action="{% url account.views.login %}" method="POST" id="login-form">
