--- a/discussion/static/discussion/styles/discussion.css
+++ b/discussion/static/discussion/styles/discussion.css
@@ -426,3 +426,29 @@ body.discussion #forum-content .post .user-name {
     margin-left: 500px;
     z-index: 10;
 }
+
+.sidebar-header h3 {
+    padding-right: 0;
+    padding-left: 0;
+    font-weight: bold;
+    color: black;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    transition: all .2s linear;
+    line-height: 10px;
+    margin-top: 10px;
+    padding-top: 0;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.new-post-btn {
+    position: absolute;
+    right: 7px;
+    top: 6px;
+    padding: 1px 5px;
+    opacity: 0.7;
+    border-radius: 3px;
+    border-color: rgba(0, 0, 0, 1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1);
+}
