--- a/discussion/templates/discussion/discussion_detail.html
+++ b/discussion/templates/discussion/discussion_detail.html
@@ -6,7 +6,11 @@
     <div class="post-list">
         <div class="sidebar-header">
             <button class="btn btn-primary btn-small new-post-btn"><i class="icon-edit icon-white"></i></button>
-            <h3>Discussions</h3>
+            <i class="icon-search icon-white"></i>
+            <form action="{% url discussion_search %}" method="POST" class="forum-search-form navbar-search pull-left">
+                {% csrf_token %}
+                {{ search_form.search }}
+            </form>
         </div>
         <div id="post-list-wrap">
             <div id="post-list-inner">
@@ -102,15 +106,12 @@ $(document).ready(function() {
             saveBtn.attr('disabled', 'disabled').text('Posting Message...');
             $('#new-post-dialog .post-form').ajaxSubmit({
                 success: function() {
-                    console.log('success');
                     $('#new-post-dialog').modal('hide');
-                    console.log('loading', window.location.href)
                     $('#post-list-wrap').load('{% url discussion slug=discussion.slug %} #post-list-inner', function() {
                         init();
                     });
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
-                    console.log('error');
                     saveBtn.removeAttr('disabled').text('Send Reply');
                     var text = $(jqXHR.responseText);
                     $('#new-post-dialog .modal-body').replaceWith(text.find('.modal-body'))
@@ -120,5 +121,5 @@ $(document).ready(function() {
     })
 
 })
-</script>
+</script>=
 {% endblock %}
